--- a/lib_qrcode/src/main/res/layout/activity_crop.xml
+++ b/lib_qrcode/src/main/res/layout/activity_crop.xml
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#ffffff"
-                android:text="@string/cancel"
+                android:text="@string/crop_cancel"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginLeft="10dp"
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#ffffff"
-                android:text="@string/rotation"
+                android:text="@string/crop_rotation"
                 android:layout_centerInParent="true"
                 />
             <TextView
@@ -46,7 +46,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#ffffff"
-                android:text="@string/confirm"
+                android:text="@string/crop_confirm"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="10dp"
